# coral-bot

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: auth.py
src/coral_bot/: client.py  oauth_provider.py  oauth_store.py  server.py  tokens.py  users.py
tests/: conftest.py  factories.py  test_account_resolution.py  test_client.py  test_helpers.py  test_metadata_patch.py  test_oauth_provider.py  test_oauth_store.py  test_tokens.py  test_tools.py  test_users.py
